# terminalgotchi

./: Cargo.toml  README.md  shell.nix
src/: creature.rs  db.rs  display.rs  growth.rs  main.rs  quips.rs  sprites.rs  stats.rs
